Fixes caching in BVH, fixes visualization in BVH ﻿

--- a/config.conf
+++ b/config.conf
@@ -1,4 +1,4 @@
-# Acceleration structures currently supported = [BVH, KDTree]
+# Acceleration structures currently supported = [BVH, PersistentBVH, KDTree]
 AccelerationStructure BVH
 # BVH construction currently supported = [SplitBVH, SAHBVH, OcclusionBVH, HLBVH]
-BVHBuilder OcclusionBVH
+BVHBuilder SplitBVH
