O-SAH fully working! Added helper_math. ﻿

--- a/config.conf
+++ b/config.conf
@@ -1,4 +1,4 @@
 # Acceleration structures currently supported = [BVH, PersistentBVH, KDTree]
 AccelerationStructure BVH
 # BVH construction currently supported = [SplitBVH, SAHBVH, OcclusionBVH, HLBVH]
-BVHBuilder SplitBVH
+BVHBuilder OcclusionBVH
