Cleanup, bugfixes and improvements.

--- a/config.conf
+++ b/config.conf
@@ -1,4 +1,11 @@
+Renderer {
 # Acceleration structures currently supported = [BVH, PersistentBVH, KDTree]
-AccelerationStructure BVH
+dataStructure BVH
 # BVH construction currently supported = [SplitBVH, SAHBVH, OcclusionBVH, HLBVH]
-BVHBuilder SplitBVH
+# KDTree construction currently supported = [SpatialMedianKDTree, SAHKDTree]
+builder SplitBVH
+}
+
+Raygen {
+random false
+}
