--- a/config.conf
+++ b/config.conf
@@ -1,11 +1,62 @@
 Renderer {
 # Acceleration structures currently supported = [BVH, PersistentBVH, KDTree]
-dataStructure BVH
-# BVH construction currently supported = [SplitBVH, SAHBVH, OcclusionBVH, HLBVH]
+dataStructure PersistentBVH
+# BVH construction currently supported = [SplitBVH, SAHBVH, OcclusionBVH, HLBVH, PersistentBVH]
 # KDTree construction currently supported = [SpatialMedianKDTree, SAHKDTree]
-builder OcclusionBVH
+builder PersistentBVH
 }
 
 Raygen {
 random false
+}
+
+SubdivisionRayCaster {
+# Launch configuration. numBlockPerSM (and NUM_WARPS) can be set to 5 for NoStruct when COUNT_STEPS are disabled
+numWarpsPerBlock 24
+numBlockPerSM 2
+
+# Weight of different plane selection methods
+triangleBasedWeight 0
+rayBasedWeight 0
+axisAlignedWeight 1
+planeSelectionOverhead 0.5
+
+# Hard termination criteria  
+rayLimit 32
+triLimit 2
+triMaxLimit 16
+maxDepth 50
+depthK1 1.2
+depthK2 2.0
+failRq 0.9
+failK1 0.26
+failK2 1.0
+# Number of failed subdivisions before a node is declared a leaf
+failureCount 0
+
+# Soft termination criteria
+ci 1
+ct 1
+ctr 1
+ctt 1
+
+# On demand termination criteria
+siblingLimit 0
+childLimit 0
+subtreeLimit 0
+
+# Dequeue setting 
+popCount 14 
+granularity 50.0
+	
+# Memory settings
+nodeRatio 5
+triRatio 3
+idxRatio 12
+
+# Debugging and benchmarking settings
+log ntrace.log
+sumTimes true
+cutOffDepth 30
+numRepeats 1
 }
