Some adjustments after merge

--- a/config.conf
+++ b/config.conf
@@ -3,7 +3,7 @@ Renderer {
 dataStructure BVH
 # BVH construction currently supported = [SplitBVH, SAHBVH, OcclusionBVH, HLBVH, PersistentBVH]
 # KDTree construction currently supported = [SpatialMedianKDTree, SAHKDTree]
-builder PersistentBVH
+builder SplitBVH
 }
 
 Raygen {
