VPL base is now somehow done, but there is far too much light. Need to work on that more.

--- a/framework.vcxproj
+++ b/framework.vcxproj
@@ -241,6 +241,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\framework\3d\Light.hpp" />
     <ClInclude Include="src\framework\base\Array.hpp" />
     <ClInclude Include="src\framework\base\BinaryHeap.hpp" />
     <ClInclude Include="src\framework\base\Defs.hpp" />
