--- a/config.conf
+++ b/config.conf
@@ -48,7 +48,7 @@ nodeRatio 5
 triRatio 3
 idxRatio 12
 # Debugging and benchmarking settings
-benchmark true
+benchmark false
 log ntrace.log
 sumTimes true
 cutOffDepth 30
