Persistent KDTree in progress.

--- a/config.conf
+++ b/config.conf
@@ -25,7 +25,7 @@ builder PersistentBVH
 rayType primary
 samples 8
 sortRays true
-cacheDataStructure true
+cacheDataStructure false
 }
 
 Raygen {
@@ -79,4 +79,45 @@ log ntrace.log
 sumTimes true
 cutOffDepth 30
 numRepeats 1
+}
+
+PersistentBVH {
+# Hard termination criteria
+triLimit 16
+triMaxLimit 16
+maxDepth 50
+# Soft termination criteria
+ci 1
+ct 1
+# Plane selection setting
+childLimit 0
+# Dequeue setting
+popCount 14
+granularity 50.0
+}
+
+PersistentKdtree {
+# Hard termination criteria
+triLimit 16
+triMaxLimit 16
+maxDepth 50
+depthK1 1.2
+depthK2 2.0
+failRq 0.9
+failK1 0.26
+failK2 1.0
+# Number of failed subdivisions before a node is declared a leaf
+failureCount 0
+# Soft termination criteria
+ci 1
+ct 1
+# Plane selection setting
+childLimit 0
+# Dequeue setting
+popCount 14
+granularity 50.0
+# Memory settings
+nodeRatio 5
+triRatio 3
+idxRatio 12
 }
