--- a/cuda.vcxproj.filters
+++ b/cuda.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClInclude Include="src\rt\ray\RayBufferKernels.hpp">
@@ -89,6 +89,9 @@
     </CudaCompile>
     <CudaCompile Include="src\rt\kernels\otracer_transparency.cu">
       <Filter>traversal</Filter>
+    </CudaCompile>
+    <CudaCompile Include="src\rt\persistentds\persistent_kdtree.cu">
+      <Filter>persistentds</Filter>
     </CudaCompile>
   </ItemGroup>
   <ItemGroup>
