Working Kd-tree and some cleanup.

--- a/config.conf
+++ b/config.conf
@@ -16,10 +16,10 @@ measureRepeats 5
 
 Renderer {
 # Acceleration structures currently supported = [BVH, KDTree]
-dataStructure BVH
+dataStructure KDTree
 # BVH construction currently supported = [SplitBVH, SAHBVH, OcclusionBVH, HLBVH, PersistentBVH]
-# KDTree construction currently supported = [SpatialMedianKDTree, SAHKDTree]
-builder PersistentBVH
+# KDTree construction currently supported = [SpatialMedianKDTree, SAHKDTree, PersistentKDTree]
+builder PersistentKDTree
 
 #rayType primary AO diffuse
 rayType primary
@@ -96,7 +96,7 @@ popCount 14
 granularity 50.0
 }
 
-PersistentKdtree {
+PersistentKDTree {
 # Hard termination criteria
 triLimit 16
 triMaxLimit 16
@@ -120,4 +120,5 @@ granularity 50.0
 nodeRatio 5
 triRatio 3
 idxRatio 12
+heapMultiplicator 20
 }
